--- a/.net core/Wpf.Mvvm.TestHarness/Wpf.Mvvm.TestHarness.csproj
+++ b/.net core/Wpf.Mvvm.TestHarness/Wpf.Mvvm.TestHarness.csproj
@@ -4,6 +4,11 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <PackageProjectUrl>https://github.com/oriches/Simple.Wpf.Themes</PackageProjectUrl>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
